<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    >

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <VideoView
            android:id="@+id/videoPlayer"
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:layout_gravity="center_vertical|center_horizontal|center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />


            <Button
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_play" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewHint1"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/shown_video"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewVideoCounter"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>