<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".login_signin.UserInfoActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@android:color/background_light"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_input_layout">

            <EditText
                android:id="@+id/name_user_info"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="@string/myAlphaNumeric"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textPersonName|textCapWords|textFilter"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/surname_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surname_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/myAlphaNumeric"
                android:hint="@string/Surname"
                android:inputType="textPersonName|textCapWords|textFilter" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/city_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/city_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/myAlphaNumeric"
                android:hint="@string/city"
                android:inputType="textPersonName|textCapWords|textFilter" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="День рождения:"
            android:clickable="false"
            android:textSize="18dp"

            android:textColor="@android:color/black"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/birthday_input_layout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/day_user_info"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/day"
                    android:inputType="date"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/editText6"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@android:color/black"
                    android:text="/" />

                <EditText
                    android:id="@+id/month_user_info"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/month"
                    android:inputType="date"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/editText7"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@android:color/black"
                    android:text="/" />

                <EditText
                    android:id="@+id/year_user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/year"
                    android:inputType="date"
                    android:maxLength="4" />
            </TableRow>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sex_user_info"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:entries="@array/пол"
            android:hint="@string/sex"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/button_finish_registration"
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="100dp"
            android:textColor="@color/colorSecondaryText"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onMyButtonClick"
            android:text="@string/next"
            tools:ignore="OnClick" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>

