<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/moneyInfo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/darker_gray"
            android:text="@string/tarif"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="138dp"
                android:layout_height="36dp"
                android:layout_below="@+id/moneyInfo"
                android:layout_weight="1"
                android:text="@string/how_much_money"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="200dp"
            android:layout_weight="1"
            android:text="@string/turn_back"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>